--- a/Software/Frontend/Host_Pathogen_Interaction/Dockerfile.prod
+++ b/Software/Frontend/Host_Pathogen_Interaction/Dockerfile.prod
@@ -45,10 +45,12 @@ RUN mkdir -p /home/app
 # create the app user
 RUN addgroup --system app && adduser --system app -ingroup app
 
+
 # create the appropriate directories
 ENV HOME=/home/app
 ENV APP_HOME=/home/app/web
 RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles
 WORKDIR $APP_HOME
 
 
